# namada-sdk-server

./: .env-template  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
