[package]
name = "namada-sdk-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
actix-web = "4.0.0"
async-std = "1.11.0"
futures = "0.3.28"
getrandom = { version = "0.2" }
namada_light_sdk = { git = "https://github.com/anoma/namada.git", rev = "v0.31.4" }
namada_sdk = { git = "https://github.com/anoma/namada.git", rev = "v0.31.4" }
namada_proof_of_stake = { git = "https://github.com/anoma/namada.git", rev = "v0.31.4" }

[features]
default = []